[package]
name = "hypertrophy_archive"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.22.0"  # egui framework
egui = "0.22.0"    # immediate mode GUI
rfd = "0.11.0"     # file dialog
winapi = { version = "0.3.9", features = ["winuser", "windef", "wingdi", "shellapi", "libloaderapi"] }

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "hypertrophy_archive.exe"
FileDescription = "Hypertrophy Exercise Archive"
ProductName = "Hypertrophy Archive"
